v3 Add parallel scraping. Remove table from UI.

--- a/SystemSpecsScraper/SystemSpecsScraper.csproj
+++ b/SystemSpecsScraper/SystemSpecsScraper.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -90,6 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="WMI_Classes.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
