--- a/SystemSpecsScraperConsole/SystemSpecsScraperConsole.csproj
+++ b/SystemSpecsScraperConsole/SystemSpecsScraperConsole.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8A649E24-CF01-469C-945D-9D532AF35554}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>YonatanMankovich.SystemSpecsScraperUI</RootNamespace>
-    <AssemblyName>SystemSpecsScraperUI</AssemblyName>
+    <ProjectGuid>{FCFDB331-3FC8-4D80-9793-86BE04C14320}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>YonatanMankovich.SystemSpecsScraperConsole</RootNamespace>
+    <AssemblyName>YonatanMankovich.SystemSpecsScraperConsole</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,56 +32,29 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.DirectoryServices" />
-    <Reference Include="System.Management" />
-    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="YonatanMankovich.SimpleConsoleMenus">
+      <HintPath>..\..\..\Libraries\SimpleConsoleMenu\SimpleConsoleMenu\bin\Debug\netstandard2.0\YonatanMankovich.SimpleConsoleMenus.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\SystemSpecsScraper\SystemSpecsScraper.csproj">
-      <Project>{9b7814dc-257d-4751-be70-909f1e1c92f8}</Project>
+      <Project>{9B7814DC-257D-4751-BE70-909F1E1C92F8}</Project>
       <Name>SystemSpecsScraper</Name>
     </ProjectReference>
   </ItemGroup>
